# RAG-QnA-System

./: .env  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0794e94b-ef29-4867-8b08-de2e042ecfe6/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/726c4991-cb84-451a-9a1e-574326733dc7/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/7614cdf7-f4b8-41d6-96c2-ac6d6a2b25e5/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/85a6f6c5-41f9-4073-b5a1-c092ec91e368/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/86c7ed10-1a2b-4b8e-9ea8-63c26919e5fd/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/aae97027-43b7-4923-89d9-5487e63ec2f9/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/b598207e-8652-4951-847f-3ce8a6e15266/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/wal/: first-index
qdrant_storage/collections/sentences/: config.json
uploads/: BDA_Final_Exam.docx  CRIMISO_FINAL_EXAM.docx  EMTECH_FINAL_EXAM.docx
(+6 files in other folders)
